// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run all tests single test 1`] = `
Array [
  Object {
    "error": undefined,
    "pass": true,
    "path": "root/test",
    "traces": Array [
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Logger created.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Function created.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "hi",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "log",
      },
      Object {
        "data": Object {
          "message": "Invoke (payload=\\"\\").",
          "result": undefined,
          "status": "success",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Function deleted.",
        },
        "sourcePath": "root/test",
        "sourceType": "wingsdk.cloud.Function",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
      Object {
        "data": Object {
          "message": "wingsdk.cloud.Logger deleted.",
        },
        "sourcePath": "root/WingLogger",
        "sourceType": "wingsdk.cloud.Logger",
        "timestamp": "<TIMESTAMP>",
        "type": "resource",
      },
    ],
  },
]
`;

exports[`run single test happy path 1`] = `
Object {
  "error": undefined,
  "pass": true,
  "path": "root/test",
  "traces": Array [
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "hi",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    Object {
      "data": Object {
        "message": "Invoke (payload=\\"\\").",
        "result": undefined,
        "status": "success",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;

exports[`run single test test failure 1`] = `
Object {
  "error": "Error: test failed
    at Handler.handle (evalmachine.<anonymous>:21:15)
    at Object.exports.handler (evalmachine.<anonymous>:24:12)
    at evalmachine.<anonymous>:27:9
    at Script.runInContext (node:vm:141:12)
    at Object.runInContext (node:vm:297:6)
    at Object.activity (/Users/eladb/code/wing3/libs/wingsdk/src/target-sim/function.inflight.ts:70:19)
    at Object.withTrace (/Users/eladb/code/wing3/libs/wingsdk/src/testing/simulator.ts:242:38)
    at Function.invoke (/Users/eladb/code/wing3/libs/wingsdk/src/target-sim/function.inflight.ts:67:25)
    at Simulator.runTest (/Users/eladb/code/wing3/libs/wingsdk/src/testing/simulator.ts:466:16)
    at processTicksAndRejections (node:internal/process/task_queues:95:5)",
  "pass": false,
  "path": "root/test",
  "traces": Array [
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger created.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function created.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "I am about to fail",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "log",
    },
    Object {
      "data": Object {
        "error": [Error: test failed],
        "message": "Invoke (payload=\\"\\").",
        "status": "failure",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Function deleted.",
      },
      "sourcePath": "root/test",
      "sourceType": "wingsdk.cloud.Function",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
    Object {
      "data": Object {
        "message": "wingsdk.cloud.Logger deleted.",
      },
      "sourcePath": "root/WingLogger",
      "sourceType": "wingsdk.cloud.Logger",
      "timestamp": "<TIMESTAMP>",
      "type": "resource",
    },
  ],
}
`;
